<resources>

    <!-- App Name -->
    <string name="app_name">KarPooler</string>

    <!-- Get Started Screens -->
    <string name="get_started">GET STARTED</string>
    <array name="get_started_titles">
        <item>Saving Money</item>
        <item>Saving Gasoline</item>
        <item>Making New Friendship</item>
        <item>Decreasing Traffic</item>
        <item>Decreasing Pollution</item>
    </array>

    <array name="get_started_descriptions">
        <item>There are many variations of passages of Lorem Ipsum available, but the majority have
            suffered alteration in some form, by injected humour,
        </item>
        <item>There are many variations of passages of Lorem Ipsum available, but the majority have
            suffered alteration in some form, by injected humour,
        </item>
        <item>There are many variations of passages of Lorem Ipsum available, but the majority have
            suffered alteration in some form, by injected humour,
        </item>
        <item>There are many variations of passages of Lorem Ipsum available, but the majority have
            suffered alteration in some form, by injected humour,
        </item>
        <item>There are many variations of passages of Lorem Ipsum available, but the majority have
            suffered alteration in some form, by injected humour,
        </item>
    </array>


    <!-- Login Screen -->
    <string name="facebook_app_id">860230554072344</string>
    <string name="app_website_url">karpooler.com</string>
    <string name="app_login_description">Discover and meet your trip mate easily</string>


    <!-- Car Selection Screens -->
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="model_year">Model Year</string>
    <string name="plate_type">Plate Type</string>
    <string name="save_and_go">SAVE AND GO</string>
    <string name="your_car">Your Car</string>
    <string name="skip">SKIP</string>

    <!-- Create Trip Screen -->
    <string name="trip_name">Trip Name</string>
    <string name="who_are_you">Who are you?</string>
    <string name="both">Both</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="number_of_seats">Number of Seats</string>
    <string name="from">From</string>
    <string name="pick_location">Pickup location</string>
    <string name="to">To</string>
    <string name="drop_of">Drop of</string>
    <string name="date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="round_trip">Roundtrip</string>
    <string name="advanced_option">Advanced Option</string>
    <string name="publish_trip">PUBLISH TRIP</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="title_activity_maps">Map</string>
    <string name="drop_off">Drop off</string>
    <string name="create_trip">Create trip</string>

    <!-- home tabs titles -->
    <array name="home_tabs_titles">
        <item>Feed</item>
        <item>My Trip</item>
        <item>Inbox</item>
        <item>Notifications</item>
        <item>More</item>
    </array>

    <!-- feed Tab -->
    <string name="friends_in_common">friends in common</string>

    <!-- My Trips Tab -->
    <string name="on_going">ONGOING</string>
    <string name="up_coming">UPCOMING</string>
    <string name="expired">EXPIRED</string>

    <!-- More Tab -->
    <string name="view_profile">View Profile</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="ride_now">Ride Now</string>
    <string name="create_car_pooling">Create Carpooling</string>
    <string name="create_group">Create Group</string>
    <string name="find_group">Find Group</string>
    <array name="menu_items">
        <item>My Route</item>
        <item>My Rating</item>
        <item>My Verification List</item>
        <item>Invite Friends</item>
        <item>Contact Us</item>
        <item>Logout</item>
        <item>Delete Account</item>
    </array>

    <!-- View Trip Activity -->
    <array name="view_trip_tabs_titles">
        <item>Details</item>
        <item>People</item>
        <item>Discussion</item>
    </array>

    <string name="passengers">Passengers</string>
    <string name="drivers">Drivers</string>
    <string name="seats_left">left</string>
    <string name="type_messages">Type messages</string>

    <!-- Trip Matches Activity -->
    <string name="trip_matches">Trip Matches</string>
    
    <array name="trip_matches_tabs_titles">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </array>

    <string name="join_trip">Join Trip</string>
    <string name="invite">Invite</string>
    <string name="no_mutual_friends">No mutual friends</string>
    <string name="verified_via">Verified via</string>
    <string name="behaviour">Behaviour</string>
    <string name="years_old">years old</string>
    <string name="registered_since">Registered since</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="star_rating_max_5">Star rating (max 5)</string>
    <string name="review">Review</string>
    <string name="submit">Submit</string>
    <string name="review_driver">Review Driver</string>
    <string name="specific_time">Specific time</string>
    <string name="search_now">Search Now</string>
    <string name="distance_q">Distance?</string>
    <string name="distance">Distance</string>
    <string name="save_distance">Save Distance</string>
    <string name="face_book">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="verify">Verify</string>
    <string name="twitter">Twitter</string>
    <string name="paypal">Paypal</string>
    <string name="google_plus">Google +</string>
    <string name="id_card">ID Card</string>
    <string name="corp_mail">Corp. Mail</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="car_plates">Car Plates</string>
    <string name="my_verification">My Verification</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="contact_us">Contact Us</string>

    <array name="invite_friends_methods">
        <item>SMS</item>
        <item>Twitter</item>
        <item>Facebook</item>
        <item>Google+</item>
        <item>Email</item>
    </array>

    <string name="invite_friends">Invite Friends</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="call">Call</string>

</resources>
