<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.eramo.karpooler.activities.ReviewDriverActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/review_driver_extended_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star_rating_max_5"
            android:textColor="@color/colorTripDetailsTextColor"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/rating_bar_user_rate"
            style="@style/BigStarRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/review"
            android:textColor="@color/colorTripDetailsTextColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edt_user_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@color/tripCardTextLightColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_save_and_go"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
